# rookie

./: .gitignore  .neon  Dockerfile  RUNNING.md  SHARESHEET-PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: keep_alive.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_onboarding.py  0003_clerk.py  0004_ingest_tokens.py  0005_link_fields.py  0006_summary_segments.py  0007_link_list_index.py
app/: config.py  db.py  deps.py  main.py  seed.py
app/api/: admin.py  auth.py  categories.py  ingest_tokens.py  links.py  onboarding.py
app/models/: __init__.py  base.py  category.py  ingest_token.py  link.py  user.py
app/schemas/: category.py  enums.py  ingest_token.py  link.py  onboarding.py
app/services/: apple_auth.py  article_body.py  catalog.py  classifier.py  clerk.py  enrichment.py  http_cache.py  ingest_token.py  metadata.py  storage.py  summarizer.py  url_normalizer.py
ios/: project.yml
ios/LinkSaver/: Info.plist  LinkSaverApp.swift
ios/LinkSaver.xcodeproj/: project.pbxproj
ios/LinkSaver/Inbox/: ArticleCard.swift  InboxView.swift  Shaders.metal
ios/LinkSaver/LinkDetail/: LinkDetailView.swift
ios/LinkSaver/Onboarding/: CategoryPickerView.swift  (+3 more)
ios/Rookie.xcodeproj/: project.pbxproj
ios/ShareExtension/: Info.plist  QuickSaveSheet.swift  ShareExtension.entitlements  ShareViewController.swift  ShareViewModel.swift
ios/Shared/: APIClient.swift  Constants.swift  KeychainStore.swift  LocalCache.swift  OfflineQueue.swift
tests/: conftest.py  test_auth_and_onboarding.py  test_endpoints.py  test_perf_and_cache.py
(+13 files in other folders)
